# UI-Testing-Tool

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  conftest.py  pyproject.toml  run.py
.github/workflows/: build.yml
config/: brand.yaml  environments.yaml  jira.yaml  mcp_axe_setup.md  selectors.yaml  settings.py
mayflowerDeploy/production/: Chart.yaml  values.yaml
mayflowerDeploy/production/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  image-updater.yaml  ingress.yaml  middleware.yaml  secret.yaml  service.yaml
reports/: axe_report.json
static/css/: style.css
static/js/: app.js
templates/: checklist_a11y.md.j2  checklist_full.md.j2  checklist_ui.md.j2  checklist_ux.md.j2
templates/web/: index.html
tests/a11y/: test_focus.py  test_keyboard.py  test_wcag.py
tests/ui/: test_branding.py  test_layout.py  test_visual.py
tests/ux/: test_conversation.py  test_error_handling.py  test_response_time.py
utils/: chat_helpers.py  discovery.py  jira_helper.py  login_helper.py  report_generator.py
